Fixed RefImage's inner img overflowing

--- a/app/Canvas.module.css
+++ b/app/Canvas.module.css
@@ -1,4 +1,4 @@
-.canvas {
+.Canvas {
     position: fixed;
     top: 0;
     left: 0;
