--- a/app/RefImage.module.css
+++ b/app/RefImage.module.css
@@ -1,7 +1,6 @@
 .RefImage {
-    background-color: blue;
 }
 
-.selected {
-    border: 5px solid cyan;
+.innerImg {
+    max-width: 100%; /* Important! Keeps the image from overflowing. */
 }
